@@ -1216,6 +1216,7 @@ $3 указал следующую причину: ''$2''",
 'randompage'                      => 'Случайная страница',
 'randompage-nopages'              => 'В данном пространстве имён отсутствуют страницы.',
 'randomincategory'                => 'Случайная страница в категории',
+'randomincategory-toolbox'        => 'Случайная страница',
 'randomincategory-nocategory'     => 'Категория "$1" пуста или не существует',
 'randomincategory-label'          => 'Категория:',
 'randomincategory-submit'         => 'Перейти',
